[package]
name = "sqlx-actix-streaming"
version = "0.1.0"
authors = ["rich-murphey <rich@murphey.org>"]
edition = "2018"
publish = false
license = "MIT OR Apache-2.0"
readme = "README.md"

[features]
default = [ "tracing", "json", "csv" ]
json = ["serde_json"]

[dependencies]
bytes = "1.3.0"
futures = "0.3.25"
tracing = { version = "0.1.37", optional = true }
ouroboros = "0.15.5"
serde = "1.0.148"
serde_json = { version = "1.0.89", optional = true }
csv = { version = "1.1.6", optional = true }
